@startuml dp3-composite
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 0
skinparam linetype polyline
skinparam nodesep 26
skinparam ranksep 42
skinparam defaultFontName "Helvetica Neue"
skinparam defaultFontSize 13
skinparam dpi 150
skinparam class {
  BackgroundColor #FFFFCE
  BorderColor #000000
  BorderThickness 1
  ArrowColor #000000
  ArrowThickness 1
  FontColor #000000
  FontName "Helvetica Neue"
  AttributeFontColor #000000
  AttributeFontName "Helvetica Neue"
  StereotypeFontColor #000000
}
skinparam note {
  BackgroundColor #FFFFFF
  BorderColor #777777
  FontColor #000000
}

title DP#4 Composite Pattern - Airport (Leaf) / AirportCity (Composite)
abstract class AirportLocation <<Component>> {
  +getCode(): String
  +getDisplayName(): String
  +getAirports(): List<Airport>
  +matches(code: String): boolean
  +isComposite(): boolean
}
class Airport <<Leaf>> {
  -airportCode: String
  -airportName: String
  -city: String
  -country: String
  --
  +getAirportCode(): String
  +getAirportName(): String
  +getCity(): String
  +getCountry(): String
  +getCode(): String
  +getDisplayName(): String
  +getAirports(): List<Airport>
  +matches(code: String): boolean
  +isComposite(): boolean
}
class AirportCity <<Composite>> {
  -cityCode: String
  -cityName: String
  -country: String
  -components: List<AirportLocation>
  --
  +AirportCity(cityCode: String, cityName: String, country: String)
  +addComponent(component: AirportLocation): void
  +removeComponent(component: AirportLocation): void
  +getCityCode(): String
  +getCityName(): String
  +getCountry(): String
  +getCode(): String
  +getDisplayName(): String
  +getAirports(): List<Airport>
  +matches(code: String): boolean
  +isComposite(): boolean
}

' Inheritance edges stay vertical (Component on top, Leaf + Composite below).
AirportLocation <|-- Airport
AirportLocation <|-- AirportCity

' Composite-holds-Component aggregation (Composite "1" holds "0..*" Component).
' Anchored from AirportCity's components field across to AirportLocation's left side
' so the diamond edge stays clear of the vertical inheritance triangle between the
' same two boxes; multiplicities read 1 (owner) to 0..* (children).
AirportCity::components "1" o-left- "0..*" AirportLocation : components >

note bottom of AirportCity : AirportCity (Composite) holds 0..* AirportLocation children (recursive composition):\nLeaf and Composite are treated uniformly through AirportLocation, so a city may even contain another city.
@enduml
